fix: database initialization and frontend UI tweaks for production